--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "@dcloudio/uni-quickapp-vue": "^2.0.0-26920200424005",
     "@dcloudio/uni-stat": "^2.0.0-26920200424005",
     "core-js": "^3.6.4",
+    "css-loader": "^0.28.7",
     "flyio": "^0.6.2",
     "regenerator-runtime": "^0.12.1",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vuex": "^3.0.1"
   },
@@ -61,6 +63,8 @@
     "@vue/cli-service": "~4.3.0",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
+    "eslint": "^7.0.0",
+    "eslint-plugin-vue": "^6.2.2",
     "mini-types": "*",
     "miniprogram-api-typings": "^2.8.0-2",
     "postcss-comment": "^2.0.0",
