--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,11 +1,11 @@
 {
     "name" : "login-template",
-    "appid" : "",
+    "appid" : "wxdddbb5c848402990",
     "description": "登录模板",
     "versionName": "1.0.0",
     "versionCode": "100",
 	"transformPx": false,
-	/* 5+App特有相关 */
+		/* 5+App特有相关 */
     "app-plus": {
 		"usingComponents": true,
 		"compilerVersion": 3,
