--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@dcloudio/uni-quickapp-light": "^2.0.0-26920200424005",
     "@dcloudio/uni-quickapp-vue": "^2.0.0-26920200424005",
     "@dcloudio/uni-stat": "^2.0.0-26920200424005",
+    "@dcloudio/uni-ui": "^1.2.1",
     "core-js": "^3.6.4",
     "css-loader": "^0.28.7",
     "flyio": "^0.6.2",
